force-app/main/default/objects/Market_Intelligence__c/Market_Intelligence__c.object-meta.xml
<CustomObject>
    <label>Market Intelligence</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Market Intelligence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Intelligence</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>