force-app/main/default/objects/Market_Intelligence__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Intelligence</relationshipLabel>
    <relationshipName>Market_Intelligence</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>