force-app/main/default/objects/Market_Intelligence__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Market Intelligence</relationshipLabel>
    <relationshipName>Market_Intelligence</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>