force-app/main/default/objects/Market_Intelligence__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>