force-app/main/default/objects/Market_Intelligence__c/fields/Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Enterprise__c</fullName>
    <label>Enterprise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>