force-app/main/default/objects/Market_Intelligence__c/fields/Lattice_Play__c.field-meta.xml
<CustomField>
    <fullName>Lattice_Play__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lattice Play</label>
    <referenceTo>LBI__Play__c</referenceTo>
    <relationshipLabel>Market Intelligence</relationshipLabel>
    <relationshipName>Market_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>