force-app/main/default/objects/Market_Intelligence__c/fields/Notebook__c.field-meta.xml
<CustomField>
    <fullName>Notebook__c</fullName>
    <label>Notebook</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>