force-app/main/default/objects/Market_Intelligence__c/fields/Server__c.field-meta.xml
<CustomField>
    <fullName>Server__c</fullName>
    <label>Server</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>