force-app/main/default/objects/Market_Intelligence__c/fields/Tablet__c.field-meta.xml
<CustomField>
    <fullName>Tablet__c</fullName>
    <label>Tablet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>