force-app/main/default/objects/Market_Intelligence__c/fields/Workstation__c.field-meta.xml
<CustomField>
    <fullName>Workstation__c</fullName>
    <label>Workstation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>